--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 	"main": "web/main.js",
 	"name": "c1440-bg",
 	"scripts": {
-		"build": "vue-cli-service build",
+		"build": "vue-cli-service build --watch",
 		"dev": "set NODE_ENV = development && vue-cli-service serve"
 	},
 	"version": "2.2.46"
