--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
 	"dependencies": {
-		"@qymh/vue-q-select": "^0.4.13",
-		"axios": "0.18.1",
-		"core-js": "3.6.5",
+		"axios": "^0.21.1",
 		"element-ui": "2.13.2",
-		"js-cookie": "2.2.0",
+		"highlight.js": "^10.7.3",
 		"less-loader": "^7.2.1",
-		"path-to-regexp": "2.4.0",
 		"vue": "2.6.10",
+		"vue-highlightjs": "^1.3.3",
 		"vue-router": "3.0.6",
 		"vuex": "3.1.0"
 	},
 	"description": "后台",
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "4.4.4",
-		"@vue/cli-service": "4.4.4",
+		"@vue/cli-service": "^3.12.1",
 		"babel-plugin-dynamic-import-node": "2.3.3",
 		"html-loader": "^1.3.2",
 		"html-webpack-plugin": "3.2.0",
-		"runjs": "4.3.2",
+		"runjs": "^4.1.3",
 		"sass": "1.26.8",
 		"sass-loader": "8.0.2",
 		"script-ext-html-webpack-plugin": "2.1.3",
 		"serve-static": "1.13.2",
 		"svg-sprite-loader": "4.1.3",
-		"svgo": "1.2.2",
+		"svgo": "^2.3.1",
 		"vue-template-compiler": "2.6.10"
 	},
 	"keywords": [],
